# teleseis

./: .gitignore  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  requirements.txt
src/: main.py  plotting.py  rotate.py  spectral.py
teleseis/: plotting.py  rotate.py  spectral.py
