[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["teleseis*"]

[project]
name = "teleseis"
version = "0.1.0"
description = "Seismic processing for teleseismic earthquakes"
requires-python = ">=3.13.11, <3.14"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "obspy==1.5.0",
    "scipy==1.17.1",
]